[package]
name = "bc-crawl"
version = "0.1.0"
authors = ["Jazmina"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
lazy_static = "1.2.0"
sha2 = "0.8.1"
chrono = "0.4.11"
chan = "0.1.23"
hex = "0.4.3"
