[package]
name = "bc-crawl"
version = "0.1.0"
authors = ["Jazmina"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.1"
clap = "2.33.0"
byteorder = "1.3.4"
lazy_static = "1.2.0"
itertools = "0.8"
sha2 = "0.8.1"
chrono = "0.4.11"
dns-lookup = "1.0.1"
chan = "0.1.23"
